auto-wallet-backup
Configurable Automatic Wallet Backup

--- a/src/qt/forms/aboutdialog.ui
+++ b/src/qt/forms/aboutdialog.ui
@@ -95,6 +95,7 @@
 Copyright &amp;copy; 2011-YYYY The Litecoin developers
 Copyright &amp;copy; 2013-YYYY Dr Kimoto Chan
 Copyright &amp;copy; 2009-YYYY The DigiByte developers
+Copyright &amp;copy; 2014-YYYY The Dash developers
 Copyright &amp;copy; 2013-YYYY The Monacoin developers</string>
        </property>
        <property name="textFormat">
